<resources>
    <string name="app_name">DoAn</string>
    <string name="my_map_api_key">agjapajpjapgaj</string>
    <string name="pothole_detection">"  Pothole Detection"</string>
    <string name="powered_by_uit">Powered by UIT</string>
    <string name="enter_your_username_email">Enter Your Username / Email:</string>
    <string name="enter_your_password">Enter Your Password:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Login">Login</string>
    <string name="donthaveaccount">"Don’t have an account? "</string>
    <string name="signup">Sign up</string>

    <!-- LOGIN -->

</resources>