<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:gravity="center">

        <ImageView
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:src="@drawable/home_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pothole_detection"
            android:textSize="44sp"
            android:textColor="#D2691E"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by_uit"
            android:textSize="15sp"
            android:textColor="#D2691E"
            android:layout_gravity="center"
            android:paddingBottom="5dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_username_email"
            android:padding="15dp"
            android:background="@drawable/edittext_background"
            android:textColorHint="#C9000000"
            android:textSize="13sp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/enter_your_password"
            android:padding="15dp"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:textColorHint="#C9000000"
            android:textSize="13sp"
            android:drawablePadding="5dp"
            android:drawableEnd="@drawable/visibility_off"
            android:longClickable="false"/>


        <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/forgot_password"
                android:textColor="#D2691E" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:background="@drawable/rounded"
            android:text="@string/Login"
            android:textColor="#FFFFFF" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donthaveaccount"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="#D2691E"
                android:textStyle="bold"
                android:layout_marginStart="5dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>